force-app/main/default/objects/X1099_Form__c/X1099_Form__c.object-meta.xml
<CustomObject>
    <description>1099 forms created</description>
    <label>1099 Form</label>
    <nameField>
        <label>1099 Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>1099 Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>