force-app/main/default/objects/X1099_Form__c/fields/FF_ID__c.field-meta.xml
<CustomField>
    <fullName>FF_ID__c</fullName>
    <label>FF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>