force-app/main/default/objects/X1099_Form__c/fields/FF_Status__c.field-meta.xml
<CustomField>
    <fullName>FF_Status__c</fullName>
    <label>FF Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>