force-app/main/default/objects/X1099_Form__c/fields/Payee_Account__c.field-meta.xml
<CustomField>
    <fullName>Payee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the Payee&apos;s Account</description>
    <label>Payee Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>1099 Forms (Payee Account)</relationshipLabel>
    <relationshipName>X1099_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>