force-app/main/default/objects/X1099_Form__c/fields/Payee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payee_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the Payee&apos;s Contact</description>
    <label>Payee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>1099 Forms (Payee Contact)</relationshipLabel>
    <relationshipName>X1099_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>