force-app/main/default/objects/X1099_Form__c/fields/Payee_File_Link__c.field-meta.xml
<CustomField>
    <fullName>Payee_File_Link__c</fullName>
    <description>A link to the payee&apos;s 1099 file</description>
    <label>Payee File Link</label>
    <type>Url</type>
</CustomField>