force-app/main/default/objects/X1099_Form__c/fields/Payee_Lead__c.field-meta.xml
<CustomField>
    <fullName>Payee_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The record of the Payee if a Lead</description>
    <label>Payee Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>1099 Forms</relationshipLabel>
    <relationshipName>X1099_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>