force-app/main/default/objects/X1099_Form__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <description>The Account of the 1099 Payer</description>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>1099 Forms</relationshipLabel>
    <relationshipName>X1099_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>