force-app/main/default/objects/X1099_Form__c/fields/Payer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payer_Contact__c</fullName>
    <description>The Contact record of the 1099 Payer</description>
    <label>Payer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>1099 Forms</relationshipLabel>
    <relationshipName>X1099_Forms</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>