force-app/main/default/objects/X1099_Form__c/fields/Payer_File_Link__c.field-meta.xml
<CustomField>
    <fullName>Payer_File_Link__c</fullName>
    <description>A link to the payer&apos;s 1099 file</description>
    <label>Payer File Link</label>
    <type>Url</type>
</CustomField>